--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,13 @@
     </properties>
 
     <dependencies>
+    
+    <dependency>
+    <groupId>org.jacoco</groupId>
+    <artifactId>jacoco-maven-plugin</artifactId>
+    <version>0.7.9</version>
+</dependency>
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
