--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,10 @@
          
     <dependencies>
     
-    <dependency>
+         <dependency>
                   <groupId>org.jacoco</groupId>
                   <artifactId>jacoco-maven-plugin</artifactId>
-                  <version>0.7.9</version
+                  <version>0.7.9</version>
          </dependency>
          <dependency>
             <groupId>org.springframework.boot</groupId>
