--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <url>http://maven.apache.org</url>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>\
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
          <junit.version>4.4</junit.version>
          <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
